--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 body{
-  padding: 5rem 2rem;
+  padding: 6rem 2rem;
   background-color: var(--lightGrayishBlue);
 
 }
@@ -33,12 +33,12 @@ body{
 main{
   display: flex;
   flex-flow: column;
+  gap: 2.5rem 0rem;
   font: normal var(--w5) 1.3rem/150% var(--barlow), sans-serif;
 }
 
 .testimonial{
   padding: 2.5rem 3.6rem;
-  margin: 1.2rem 0rem;
   border-radius: 0.8rem;
 }
 
@@ -70,7 +70,6 @@ h2{
   font-size: 2rem;
   font-weight: var(--w5);
   line-height: 125%;
-  max-width: 45ch;
   margin: 1.5rem 0rem;
 }
 
@@ -84,7 +83,6 @@ h2{
 
 .testimonial:nth-child(1){
   background: var(--violet) url(../images/bg-pattern-quotation.svg) no-repeat scroll top right;
-  background-size: 33%;
   background-position-x: 89%;
 
     
@@ -135,13 +133,45 @@ h2{
     color: hsl(228, 45%, 44%);
   }
 
+@media screen and (min-width: 768px){
+
+    main{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+      gap: 2rem
+    }
+
+    .testimonial:nth-child(1){
+      grid-area: 1 / 1 / 2 / 3;
+
+    }
+    
+    .testimonial:nth-child(2){
+      grid-area: 2 / 1 / 3 / 2;
+    }
+    
+    .testimonial:nth-child(3){
+      grid-area: 3 / 1 / 4 / 2;
+    }
+    
+    .testimonial:nth-child(4){
+      grid-area: 4 / 1 / 5 / 3;
+    }
+    
+    .testimonial:nth-child(5){
+      grid-area: 2 / 2 / 4 / 3;
+    }
+}
+
+
   @media screen and (min-width: 998px) {
     main{
       display: grid;
       grid-template-columns: 2fr 2fr 2fr 2fr;
       grid-template-rows: 1fr 1fr;
       grid-gap: 3rem;
-      padding: 5em;
+      padding: 0rem;
     }    
 
     .testimonial{
